k3s-setup/ubuntu/hashicorp-vault/hashicorp-vault-setup-files/vault-ingress.yaml
# vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - vault.bhavyajagjananidarbar.org
      secretName: vault-tls
  rules:
    - host: vault.bhavyajagjananidarbar.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vault
              port:
                number: 8200
